--- a/pom.xml
+++ b/pom.xml
@@ -213,16 +213,53 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven-clean-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <!-- Плагин отвечает за очистку папки
+                             target перед сборкой -->
+                        <id>[##1]-clean-target</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-clean</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${user.resources}</directory>
+                            <includes>
+                                <include>**/engine-libs.zip</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
                 <version>${maven-buildnumber-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>generate-git-commit-hash</id>
+                        <!-- Плагин добавляет git hash текущего коммита
+                             из которого делается сборка -->
+                        <id>[##2]-generate-git-commit-hash</id>
                         <phase>validate</phase>
                         <goals>
                             <goal>create</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>default</id>
+                        <phase>none</phase>
                     </execution>
                 </executions>
                 <configuration>
@@ -251,19 +288,50 @@
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler.version}</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>${maven-license.version}</version>
+                <executions>
+                    <execution>
+                        <!-- Плагин добавляет во все source файлы
+                             header лицензии -->
+                        <id>[##3]-add-license-headers</id>
+                        <goals>
+                            <goal>update-file-header</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
                 <configuration>
-                    <encoding>utf8</encoding>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <licenseName>gpl_v3</licenseName>
+                    <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+                    <organizationName>Codenjoy</organizationName>
+                    <projectName>Codenjoy - it's a dojo-like platform from developers to developers.</projectName>
+                    <inceptionYear>2018</inceptionYear>
+                    <canUpdateCopyright>false</canUpdateCopyright>
+                    <canUpdateDescription>false</canUpdateDescription>
+                    <canUpdateLicense>false</canUpdateLicense>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>${maven-resources.version}</version>
+                <executions>
+                    <execution>
+                        <!-- Плагин отвечает за копирование
+                             ресурсов -->
+                        <id>[##4]-copy-resources</id>
+                        <goals>
+                            <goal>resources</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                    </execution>
+                    <execution>
+                        <id>default-resources</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
                 <configuration>
                     <encoding>utf8</encoding>
                     <nonFilteredFileExtensions>
@@ -273,59 +341,58 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>${maven-clean-plugin.version}</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
+                <executions>
+                    <execution>
+                        <!-- Плагин отвечает за компиляцию
+                             классов -->
+                        <id>[##5]-compile-java</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <phase>compile</phase>
+                    </execution>
+                    <execution>
+                        <id>default-compile</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
                 <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${user.resources}</directory>
-                            <includes>
-                                <include>**/engine-libs.zip</include>
-                            </includes>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                    </filesets>
+                    <encoding>utf8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven-jar-plugin.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/logback.xml</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <!-- TODO вместо двух плагиров ниже использовать https://stackoverflow.com/a/37149396 -->
-            <!-- плагин вытягивает в пропертю com.codenjoy:client-java:jar путь к либе -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>${maven-dependency-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>write-dependencies-properties</id>
+                        <!-- Плагин вытягивает в пропертю
+                             com.codenjoy:client-java:jar путь к либе -->
+                        <id>[##6]-write-dependencies-properties</id>
                         <goals>
                             <goal>properties</goal>
                         </goals>
-                        <phase>compile</phase>
+                        <phase>prepare-package</phase>
                     </execution>
                 </executions>
             </plugin>
-            <!-- плагин из проперти com.codenjoy:client-java:jar создает
-                 две подобные с sources и pom -->
             <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
                 <version>1.5</version>
                 <executions>
                     <execution>
-                        <id>run-groovy</id>
+                        <!-- Плагин из проперти com.codenjoy:client-java:jar создает
+                             две подобные с sources и pom -->
+                        <id>[##7]-run-groovy</id>
                         <goals>
                             <goal>execute</goal>
                         </goals>
-                        <phase>compile</phase>
+                        <phase>prepare-package</phase>
                         <configuration>
                             <source>
                                 String jar = project.properties.getProperty('com.codenjoy:client-java:jar')
@@ -333,34 +400,69 @@
                                         jar.replace('.jar', '-sources.jar'))
                                 project.properties.setProperty('com.codenjoy:client-java:pom',
                                         jar.replace('.jar', '.pom'))
+
+                                println project.properties.getProperty('com.codenjoy:client-java:jar')
+                                println project.properties.getProperty('com.codenjoy:client-java:sources')
+                                println project.properties.getProperty('com.codenjoy:client-java:pom')
                             </source>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <!-- Плагин добавлет jar с сырцами engine в target -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <phase>none</phase>
+                    </execution>
+                    <execution>
+                        <!-- Плагин отвечает за сборку jar
+                             файла -->
+                        <id>[##8]-make-jar</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/logback.xml</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>attach-engine-sources</id>
+                        <!-- Плагин добавлет jar с сырцами engine
+                             в target -->
+                        <id>[##9]-attach-engine-sources</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
-                        <phase>compile</phase>
+                        <phase>prepare-package</phase>
+                    </execution>
+                    <execution>
+                        <id>default-jar</id>
+                        <phase>none</phase>
                     </execution>
                 </executions>
             </plugin>
-            <!-- Плагин собирает engine-libs.zip со всеми артефактами -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>${maven-antrun.version}</version>
                 <executions>
                     <execution>
-                        <id>run-ant</id>
+                        <!-- Плагин собирает engine-libs.zip
+                             со всеми артефактами -->
+                        <id>[##10]-run-ant</id>
                         <goals>
                             <goal>run</goal>
                         </goals>
@@ -406,31 +508,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>${maven-license.version}</version>
-                <configuration>
-                    <licenseName>gpl_v3</licenseName>
-                    <licenseResolver>${project.baseUri}/src/license</licenseResolver>
-                    <organizationName>Codenjoy</organizationName>
-                    <projectName>Codenjoy - it's a dojo-like platform from developers to developers.</projectName>
-                    <inceptionYear>2018</inceptionYear>
-                    <canUpdateCopyright>false</canUpdateCopyright>
-                    <canUpdateDescription>false</canUpdateDescription>
-                    <canUpdateLicense>false</canUpdateLicense>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>first</id>
-                        <goals>
-                            <goal>update-file-header</goal>
-                        </goals>
-                        <phase>process-sources</phase>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-
 </project>
