--- a/pom.xml
+++ b/pom.xml
@@ -440,7 +440,7 @@
                 <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
-                        <!-- Плагин добавлет jar с сырцами engine
+                        <!-- Плагин добавляет jar с сырцами engine
                              в target -->
                         <id>[##9]-attach-engine-sources</id>
                         <goals>
