--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
             <version>${fest-reflect.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
