--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <maven-buildnumber-plugin.version>1.4</maven-buildnumber-plugin.version>
         <maven-scm-jgit.version>1.11.2</maven-scm-jgit.version>
         <maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
+        <maven-exec-plugin.version>3.1.0</maven-exec-plugin.version>
 
         <user.resources>src/main/webapp/resources/user</user.resources>
         <engine.libs>${user.resources}/engine-libs.zip</engine.libs>
@@ -64,6 +65,17 @@
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-maven</artifactId>
                         <version>${pitest.version}</version>
+                        <executions>
+                            <execution>
+                                <!-- Плагин отвечает за мутационное тестирование.
+                                     Включается для игр ключом -Pmutation -->
+                                <id>[##7]-mutation-testing</id>
+                                <goals>
+                                    <goal>mutationCoverage</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
                         <configuration>
                             <targetClasses>
                                 <param>com.codenjoy.dojo.*</param>
@@ -77,15 +89,6 @@
                             </excludedTestClasses>
                             <reportsDirectory>${project.basedir}/pitest/</reportsDirectory>
                         </configuration>
-                        <executions>
-                            <execution>
-                                <id>pitest</id>
-                                <goals>
-                                    <goal>mutationCoverage</goal>
-                                </goals>
-                                <phase>test</phase>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -365,6 +368,30 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${maven-exec-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <!-- Плагин отвечает за генерацию
+                             всех мануалов -->
+                        <id>[##6]-generate-elements</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.codenjoy.dojo.services.generator.manual.ManualGeneratorRunner</mainClass>
+                            <arguments>
+                                <argument>./</argument>
+                                <argument>clifford,mollymage,namdreab,rawelbbub,sample,sampletext,verland</argument>
+                                <argument>all</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>${maven-dependency-plugin.version}</version>
@@ -372,7 +399,7 @@
                     <execution>
                         <!-- Плагин вытягивает в пропертю
                              com.codenjoy:client-java:jar путь к либе -->
-                        <id>[##6]-write-dependencies-properties</id>
+                        <id>[##8]-write-dependencies-properties</id>
                         <goals>
                             <goal>properties</goal>
                         </goals>
@@ -388,7 +415,7 @@
                     <execution>
                         <!-- Плагин из проперти com.codenjoy:client-java:jar создает
                              две подобные с sources и pom -->
-                        <id>[##7]-run-groovy</id>
+                        <id>[##9]-run-groovy</id>
                         <goals>
                             <goal>execute</goal>
                         </goals>
@@ -421,7 +448,7 @@
                     <execution>
                         <!-- Плагин отвечает за сборку jar
                              файла -->
-                        <id>[##8]-make-jar</id>
+                        <id>[##10]-make-jar</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
@@ -442,7 +469,7 @@
                     <execution>
                         <!-- Плагин добавляет jar с сырцами engine
                              в target -->
-                        <id>[##9]-attach-engine-sources</id>
+                        <id>[##11]-attach-engine-sources</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
@@ -462,7 +489,7 @@
                     <execution>
                         <!-- Плагин собирает engine-libs.zip
                              со всеми артефактами -->
-                        <id>[##10]-run-ant</id>
+                        <id>[##12]-run-ant</id>
                         <goals>
                             <goal>run</goal>
                         </goals>
